# purrsona

./: .gitignore  AGENTS.md  LICENSE  README.md  STATUS.md  docker-compose.yml
.kiro/specs/purrsona-v1-implementation/: .config.kiro  design.md  requirements.md  tasks.md
backend/: .env.example  .gitignore  Dockerfile  db.Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: admin.py  auth.py  cats.py  feeding.py  map.py  matching.py  sightings.py
backend/app/core/: config.py  error_handlers.py  rate_limit.py  rbac.py  security.py
backend/app/db/: pool.py
backend/app/models/: user.py
backend/app/services/: auth_service.py  cat_service.py  coordinate_service.py  embedding_service.py  feeding_service.py  image_service.py  map_service.py  sighting_service.py
backend/migrations/: 001_initial.sql  002_user_account_settings.sql  003_sighting_reporter_contact.sql  seed.sql
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_cats.py  test_feeding.py  test_health.py  test_map.py  test_matching.py  test_sightings.py
docs/: aws-migration-runbook.md  purrsona-v1-decisions (1).md
docs/superpowers/plans/: 2026-07-01-matching-pipeline.md  2026-07-01-sighting-submission.md  2026-07-02-cat-editing.md  2026-07-02-feeding-tnr-reports.md  2026-07-02-frontend-error-handling.md  2026-07-02-frontend-feeding-tnr-reports.md  2026-07-02-frontend-map-cats.md  2026-07-02-frontend-sighting-wizard.md  2026-07-02-map-cat-endpoints.md  2026-07-04-integration-testing.md
docs/superpowers/specs/: 2026-06-24-cat-tracker-design.md  2026-07-01-matching-pipeline-design.md  2026-07-01-sighting-submission-design.md  2026-07-02-cat-editing-design.md  2026-07-02-feeding-tnr-reports-design.md  2026-07-02-frontend-error-handling-design.md  2026-07-02-frontend-feeding-tnr-reports-design.md  2026-07-02-frontend-map-cats-design.md  2026-07-02-frontend-sighting-wizard-design.md  2026-07-02-map-cat-endpoints-design.md  (+1 more)
frontend/: .gitignore  .typeui-design-system.json  Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/e2e/: auth.spec.ts  cats.spec.ts  helpers.ts  map.spec.ts  sighting-wizard.spec.ts
(+39 files in other folders)
