[project]
name = "purrsona-backend"
version = "0.1.0"
description = "Purrsona community cat tracker — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29,<1",
    "asyncpg>=0.29,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7,<2",
    "python-multipart>=0.0.9",
    "boto3>=1.34,<2",
    "Pillow>=10.3,<11",
    "timm>=1.0,<2",
    "torch>=2.3,<3",
    "torchvision>=0.18,<1",
    "numpy>=1.26,<2",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "hypothesis>=6.100,<7",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in default args is standard

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
